# VeriPhys-Creator

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  IntegrityLedger.json  IntegrityLedger.sol  README.md  VeriPhys.sol  docker-compose.yml  index.html  nginx.conf
.github/workflows/: main.yml
scripts/: setup.sh
src/: handlers.rs  lib.rs  main.rs
src/handlers/: handlers.rs  mod.rs
tests/: integrity_tests.rs
veriphys-protocol-core-main/: Cargo.toml  README.md
veriphys-protocol-core-main/scripts/: deploy.js
veriphys-protocol-core-main/src/: main.rs
veriphys-protocol-core-main/tests/: integrity_tests.rs
