[package]
name = "veriphys-protocol-core"
version = "1.0.0"
authors = ["narukihto"]
edition = "2024"

[dependencies]
# Modern Async & Web stack
axum = { version = "0.7.9", features = ["multipart"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "limit"] }

# Environment & Serialization
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha3 = "0.10.8"
hex = "0.4"

# Blockchain with Rustls
# Note: We use version 2.2.0 directly here to satisfy the security requirement
ethers = { version = "2.0.14", features = ["rustls", "abigen", "ws"] }
rustls-pemfile = "2.2.0" 

[patch.crates-io]
# This points to a DIFFERENT source (GitHub), which is allowed and fixes the 'ring' vulnerability
ring = { git = "https://github.com/briansmith/ring", branch = "main" }
